# GameOff-2019-Plantower

./: .gitignore  .travis.yml  CMakeLists.txt  COMPILATION  README.md
data/: mini_ts.tsx  test_map.tmx  walker.tsx
data/characters/: walker.tsx
data/characters/bug/: bugWalkDown.tsx  bugWalkDownLeft.tsx  bugWalkDownRight.tsx  bugWalkLeft.tsx  bugWalkRight.tsx  bugWalkUp.tsx  bugWalkUpLeft.tsx  bugWalkUpRight.tsx
data/characters/deer/: SHA_deerFightDown.tsx  SHA_deerFightDownLeft.tsx  SHA_deerFightDownRight.tsx  SHA_deerFightLeft.tsx  SHA_deerFightRight.tsx  SHA_deerFightUp.tsx  SHA_deerFightUpLeft.tsx  SHA_deerFightUpRight.tsx  SHA_deerIdleDown.tsx  SHA_deerIdleDownLeft.tsx  SHA_deerIdleDownRight.tsx  SHA_deerIdleLeft.tsx  SHA_deerIdleRight.tsx  SHA_deerIdleUp.tsx  SHA_deerIdleUpLeft.tsx  SHA_deerIdleUpRight.tsx  SHA_deerWalkDown.tsx  SHA_deerWalkDownLeft.tsx  SHA_deerWalkDownRight.tsx  SHA_deerWalkLeft.tsx  SHA_deerWalkRight.tsx  SHA_deerWalkUp.tsx  SHA_deerWalkUpLeft.tsx  SHA_deerWalkUpRight.tsx  deerFightDown.tsx  deerFightDownLeft.tsx  deerFightDownRight.tsx  deerFightLeft.tsx  deerFightRight.tsx  deerFightUp.tsx  deerFightUpLeft.tsx  deerFightUpRight.tsx  deerIdleDown.tsx  deerIdleDownLeft.tsx  deerIdleDownRight.tsx  deerIdleLeft.tsx  deerIdleRight.tsx  deerIdleUp.tsx  deerIdleUpLeft.tsx  deerIdleUpRight.tsx  (+8 more)
data/characters/goat/: SHA_goatWalkDown.tsx  SHA_goatWalkDownLeft.tsx  SHA_goatWalkDownRight.tsx  SHA_goatWalkLeft.tsx  SHA_goatWalkRight.tsx  SHA_goatWalkUp.tsx  (+10 more)
data/scenes/: menu.tmx  stage1.tmx
data/tilesets/: Marker.tsx  collision.tsx  mini_ts.tsx  molehill.tsx  projectile.tsx  rocks.tsx  trees.tsx  well.tsx
scripts/: build.sh  clone_lib.sh  compile.sh  pack_artifacts.sh  startGame.sh
src/character_components/: has_shadow.cpp  has_shadow.hpp
src/characters/: button.cpp  button.hpp  marker.cpp  marker.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  slave.cpp  slave.hpp  small_enemy.cpp  small_enemy.hpp  small_enemy_alt.cpp  small_enemy_alt.hpp  template.cpp  template.hpp  tower.cpp  tower.hpp
src/core/: game_character.cpp  game_character.hpp  game_scene.cpp  game_scene.hpp  main.cpp  player.cpp  player.hpp  scene_manager.cpp  scene_manager.hpp
src/scenes/: environment.cpp  environment.hpp  menu.cpp  menu.hpp  template.cpp  template.hpp
(+5 files in other folders)
